TaskList Layout Ready

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,13 +13,18 @@
             android:label="@string/signin"
             android:theme="@style/AppTheme"
             >
+
+        </activity>
+        <activity android:name=".TaskList"
+            android:theme="@style/AppTheme.NoActionBar"
+            android:label="Tasks"
+            >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".TaskList"></activity>
     </application>
 
 </manifest>
