--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,7 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="probeginners.whattodo">
-<uses-permission android:name="android.permission.INTERNET"></uses-permission>
+
+    <uses-permission android:name="android.permission.INTERNET" />
+
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
@@ -11,20 +13,18 @@
         <activity
             android:name=".MainActivity"
             android:label="@string/signin"
-            android:theme="@style/AppTheme"
-            >
-
-        </activity>
-        <activity android:name=".TaskList"
-            android:theme="@style/AppTheme.NoActionBar"
+            android:theme="@style/AppTheme"></activity>
+        <activity
+            android:name=".TaskList"
             android:label="Tasks"
-            >
+            android:theme="@style/AppTheme.NoActionBar">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        <activity android:name=".NewList"></activity>
     </application>
 
 </manifest>
