--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -25,8 +25,10 @@
             </intent-filter>
         </activity>
         <activity android:name=".NewList" />
-        <activity android:name=".TasksActivity" />
-        <activity android:name=".NewTaskActivity"></activity>
+        <activity android:name=".NewTaskActivity" />
+        <activity android:name=".TaskDetailsActivity">
+
+        </activity>
     </application>
 
 </manifest>
