--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -3,8 +3,8 @@
     package="probeginners.whattodo">
 
     <uses-permission android:name="android.permission.INTERNET" />
-<uses-permission android:name="android.permission.WAKE_LOCK"></uses-permission>
-    <uses-permission android:name="com.android.alarm.permission.SET_ALARM"></uses-permission>
+    <uses-permission android:name="android.permission.WAKE_LOCK" />
+    <uses-permission android:name="com.android.alarm.permission.SET_ALARM" />
 
     <application
         android:allowBackup="true"
@@ -28,11 +28,9 @@
         </activity>
         <activity android:name=".NewList" />
         <activity android:name=".NewTaskActivity" />
-        <activity android:name=".TaskDetailsActivity">
+        <activity android:name=".TaskDetailsActivity"></activity>
 
-        </activity>
-
-        <receiver android:name=".AlarmReciever"></receiver>
+        <receiver android:name=".AlarmReciever" />
 
     </application>
 
