--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -36,9 +36,9 @@
         <activity android:name="navigation.Inbox" />
         <activity android:name="navigation.InboxTask" />
         <activity
-            android:name=".SettingsActivity"
+            android:name="navigation.SettingsActivity"
             android:label="@string/title_activity_settings" />
-        <activity android:name="navigation.FeedbackActivity"></activity>
+        <activity android:name="navigation.FeedbackActivity" />
     </application>
 
 </manifest>
