--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -23,15 +23,14 @@
             android:parentActivityName=".Navigation" />
         <activity
             android:name=".TaskDetailsActivity"
-            android:parentActivityName=".NewTaskActivity"></activity>
+            android:parentActivityName=".NewTaskActivity" />
 
         <receiver android:name=".AlarmReciever" />
 
         <activity
             android:name=".Navigation"
             android:label="@string/title_activity_navigation"
-            android:theme="@style/AppTheme"
-            >
+            android:theme="@style/AppTheme">
             <intent-filter android:label="@string/app_name">
                 <action android:name="android.intent.action.MAIN" />
 
@@ -45,7 +44,8 @@
             android:name="navigation.SettingsActivity"
             android:label="@string/title_activity_settings" />
         <activity android:name="navigation.FeedbackActivity" />
-        <activity android:name=".Help"></activity>
+        <activity android:name=".Help" />
+        <activity android:name=".Info"></activity>
     </application>
 
 </manifest>
