--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -31,11 +31,7 @@
             android:name=".Navigation"
             android:label="@string/title_activity_navigation"
             android:theme="@style/AppTheme">
-            <intent-filter android:label="@string/app_name">
-                <action android:name="android.intent.action.MAIN" />
 
-                <category android:name="android.intent.category.LAUNCHER" />
-            </intent-filter>
         </activity>
         <activity android:name="navigation.Favourite" />
         <activity android:name="navigation.Inbox" />
@@ -45,7 +41,14 @@
             android:label="@string/title_activity_settings" />
         <activity android:name="navigation.FeedbackActivity" />
         <activity android:name=".Help" />
-        <activity android:name=".Info"></activity>
+        <activity android:name=".Info" />
+        <activity android:name="welcome.WelcomeActivity">
+            <intent-filter android:label="@string/app_name">
+                <action android:name="android.intent.action.MAIN" />
+
+                <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
+        </activity>
     </application>
 
 </manifest>
