--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,7 +12,7 @@
     <application
         android:allowBackup="true"
         android:hardwareAccelerated="false"
-        android:icon="@drawable/logo"
+        android:icon="@drawable/icon2"
         android:label="@string/app_name"
         android:largeHeap="true"
         android:supportsRtl="true"
@@ -38,7 +38,6 @@
             android:label="@string/title_activity_settings" />
         <activity android:name="navigation.FeedbackActivity" />
         <activity android:name=".Help" />
-        <activity android:name=".Info" />
         <activity android:name="welcome.WelcomeActivity">
             <intent-filter android:label="@string/app_name">
                 <action android:name="android.intent.action.MAIN" />
