--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -18,12 +18,15 @@
         android:label="@string/app_name"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".NewList" />
+        <activity android:name=".NewList"
+            android:windowSoftInputMode="adjustPan"></activity>
         <activity
             android:name=".NewTaskActivity"
+            android:windowSoftInputMode="adjustPan"
             android:parentActivityName=".Navigation" />
         <activity
             android:name=".TaskDetailsActivity"
+            android:windowSoftInputMode="adjustPan"
             android:parentActivityName=".NewTaskActivity" />
 
         <receiver android:name=".AlarmReciever" />
@@ -31,9 +34,12 @@
         <activity
             android:name=".Navigation"
             android:label="@string/title_activity_navigation"
+            android:windowSoftInputMode="adjustPan"
             android:theme="@style/AppTheme"></activity>
-        <activity android:name="navigation.Favourite" />
-        <activity android:name="navigation.InboxTask" />
+        <activity android:name="navigation.Favourite"
+            android:windowSoftInputMode="adjustPan"/>
+        <activity android:name="navigation.InboxTask"
+            android:windowSoftInputMode="adjustPan"/>
         <activity
             android:name="navigation.SettingsActivity"
             android:label="@string/title_activity_settings" />
@@ -46,7 +52,8 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".ScheduledTask"></activity>
+        <activity android:name=".ScheduledTask"
+            android:windowSoftInputMode="adjustPan"></activity>
     </application>
 
 </manifest>
